tests/data/negative/test_data_name_taken.orb
fnc foo() {}

data foo {
    i32 x;
}

fnc main() {}